--- a/PythonWeb/1807day01/01-HTML.html
+++ b/PythonWeb/1807day01/01-HTML.html
@@ -1,25 +1,12 @@
-<html>		<!--# 文档开始-->
+<html>
 	<head>
-		<!--# 网页头部信息：
-			标签标示网页的头部信息，
-			包含网页的标题，
-			选项卡的图标，
-			网页的关键字，作者	，
-			描述等信息，
-			还可以引入外部的资源文件
-		-->
-		<meta charset="utf-8">
-		<title>谷歌一下</title>
+		<meta charset="UTF-8">
+		<title>百度一下，你就知道</title>
 	</head>
 	<body>
-		<!--
-			# 标签表示网页的主体信息，
-			网页所有需要呈现的内容都要写在body里
-		-->
-		例：我的第一个网页
-		html真事多
+		<!-- HTML 注释 -->
+		我的第一个网页HTML 
 	</body>
-	哈哈
-</html>		<!--# 文档结束-->
-<!--html 注释-->
-嘻嘻
+</html>
+
+
